--- a/src/coreclr/pal/tests/palsuite/exception_handling/pal_sxs/test1/CMakeLists.txt
+++ b/src/coreclr/pal/tests/palsuite/exception_handling/pal_sxs/test1/CMakeLists.txt
@@ -11,10 +11,10 @@ if(CORECLR_SET_RPATH)
     set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
     set(CMAKE_INSTALL_RPATH "@loader_path")
   endif(CLR_CMAKE_HOST_OSX)
-  if(CLR_CMAKE_HOST_LINUX OR CLR_CMAKE_HOST_HAIKU)
+  if(CLR_CMAKE_HOST_LINUX OR CLR_CMAKE_HOST_HAIKU OR CLR_CMAKE_HOST_SUNOS)
     set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
     set(CMAKE_INSTALL_RPATH "\$ORIGIN")
-  endif(CLR_CMAKE_HOST_LINUX OR CLR_CMAKE_HOST_HAIKU)
+  endif(CLR_CMAKE_HOST_LINUX OR CLR_CMAKE_HOST_HAIKU OR CLR_CMAKE_HOST_SUNOS)
 endif(CORECLR_SET_RPATH)
 
 # Test DLL1
